# Personal-Ai-Agent

./: .env.example  .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
agent/: __init__.py
agent/executor/: __init__.py
agent/memory/: __init__.py
agent/planner/: __init__.py
agent/prompts/: __init__.py
agent/tools/: __init__.py
apps/: __init__.py
apps/api/: __init__.py  app.py  dependencies.py  errors.py  main.py  maps_responses.py  middleware.py  responses.py  routes.py
apps/cli/: __init__.py  auth.py  calendar.py  console.py  docs.py  doctor.py  drive.py  gmail.py  google_factory.py  main.py  maps.py  output.py  sheets.py  weather.py
apps/worker/: __init__.py  main.py
cache/: __init__.py  factory.py  manager.py
core/: __init__.py  constants.py  container.py  factory.py  metadata.py  metrics.py  registries.py  types.py  validation.py
core/config/: __init__.py  enums.py  settings.py  validators.py
core/context/: __init__.py  request.py
core/exceptions/: __init__.py  base.py  infrastructure.py
core/interfaces/: __init__.py  health.py  lifecycle.py  repository.py
core/logging/: __init__.py  formatter.py  logger.py
core/security/: __init__.py  cipher.py
core/utils/: __init__.py  identifiers.py  time.py
database/: __init__.py  base.py  engine.py  manager.py  session.py  transaction.py
database/migrations/: __init__.py
database/models/: __init__.py  (+6 more)
health/: __init__.py  service.py
integrations/: __init__.py
services/: __init__.py
worker/: __init__.py  app.py  broker.py  config.py  task.py
workers/: __init__.py
(+137 files in other folders)
