[project]
name = "personal-ai-agent"
version = "0.1.0"
description = "Production infrastructure foundation for Personal AI Agent."
requires-python = ">=3.13"

[project.scripts]
pa = "apps.cli.main:main"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
